--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.10+1
+  firebase_core: ^3.1.1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
