--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   firebase_core: ^3.1.1
   google_sign_in: ^6.2.1
+  firebase_auth: ^5.1.1
 
 dev_dependencies:
   flutter_test:
