--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^5.1.1
   curved_navigation_bar: ^1.0.6
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
