--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^5.1.1
   curved_navigation_bar: ^1.0.6
   percent_indicator: ^4.2.3
+  cloud_firestore: ^5.0.2
 
 dev_dependencies:
   flutter_test:
