--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   percent_indicator: ^4.2.3
   cloud_firestore: ^5.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
