--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   percent_indicator: ^4.2.3
   cloud_firestore: ^5.0.2
   intl: ^0.19.0
+  mobile_scanner: ^5.1.1
 
 dev_dependencies:
   flutter_test:
