--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,13 @@ dependencies:
   cloud_firestore: ^5.0.2
   intl: ^0.19.0
   mobile_scanner: ^5.1.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
