--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   mobile_scanner: ^5.1.1
   image_picker: ^1.1.2
   firebase_storage: ^12.1.0
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
